gedcomfy/tests/snapshots/tests__golden_files@after_trlr.ged.snap
---
source: gedcomfy/tests/tests.rs
description: "0 HEAD\r\n0 TRLR\r\n0 BADBADBAD\r\n"
expression: "format!(\"{:?}\",\n    Report::new(err).with_source_code(NamedSource::new(filename, data)))"
input_file: gedcomfy/tests/format_inputs/after_trlr.ged
---
gedcom::record_error::value_missing

  × GEDCOM file contains a record-hierarchy error
  ╰─▶ A record without subrecords must have a value
   ╭─[after_trlr.ged:1:1]
 1 │ 0 HEAD
   · ───┬──
   ·    ╰── this record must contain a value, since it has no subrecords
 2 │ 0 TRLR
   ╰────
